# apcf

./: .Rbuildignore  .drone.yml  .gitattributes  .gitignore  .travis.yml  404.html  A_Plan_to_drop_GDAL.html  A_Plan_to_drop_GDAL.md  CITATION.cff  DESCRIPTION  NAMESPACE  NEWS.md  README.md  TODO.html  TODO.md  _pkgdown.yml  apcf.Rproj  authors.html  authors.md  configure  configure.ac  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml
R/: RcppExports.R  apcf-package.R  dists.R  dists2pcf.R  doc_patterns.R  fv_pcf.R  init.R  pat2dists.R  plot.fv_pcf.R  test_read_wkb.R
articles/: index.html  index.md  intro.html  intro.md
data/: sim_area.rda  sim_area_wkb.rda  sim_pat_clust.rda  sim_pat_clust_wkb.rda  sim_pat_rand.rda  sim_pat_rand_wkb.rda  sim_pat_reg.rda  sim_pat_reg_wkb.rda
data-raw/: convert_to_wkb.R  sim_area.dbf  sim_pat_clust.dbf  sim_pat_clust.shp  sim_pat_clust.shx  sim_pat_rand.shp  sim_pat_rand.shx  sim_pat_reg.dbf  sim_pat_reg.shp  sim_pat_reg.shx
inst/: CITATION
inst/shapes/: sim_area.dbf  sim_pat_clust.dbf  sim_pat_clust.shp  sim_pat_clust.shx  sim_pat_rand.shp  sim_pat_rand.shx  sim_pat_reg.dbf  sim_pat_reg.shp  sim_pat_reg.shx
man/: apcf-package.Rd  dists.Rd  dists2pcf.Rd  fv_pcf.Rd  pat2dists.Rd  patterns.Rd  plot.fv_pcf.Rd  sim_patterns.Rd  test_reading_polys.Rd  test_reading_wkb.Rd  test_rw_wkb.Rd
news/: index.html  index.md
reference/: apcf-package.html  apcf-package.md  apcf.html  dists.html  dists.md  dists2pcf.html  dists2pcf.md  fv_pcf.html  fv_pcf.md  index.html  index.md  is.dists.html  is.fv_pcf.html  pat2dists.html  pat2dists.md  plot.fv_pcf.html  plot.fv_pcf.md  sim_pat_reg.html  sim_patterns.html  sim_patterns.md
src/: Makevars.ucrt  Makevars.win  RcppExports.cpp  geos_stuff.cpp  geos_stuff.h  import_export.cpp  import_export.h  rand_dists_ratios.cpp
tools/: winlibs.R
vignettes/: intro.Rmd
